--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+    vertical-align: baseline;
+    box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -142,7 +143,7 @@ h2 {
     font-size: 18px;
     font-weight: 700;
     line-height: 1.5;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
@@ -153,6 +154,8 @@ h2 {
 
 .portfolio-col-img {
     margin-bottom: 15px;
+    background-size: cover;
+    background-position: center;
 }
 
 .portfolio-wrap {
@@ -164,6 +167,7 @@ h2 {
     max-width: 25%;
     flex: 0 0 25%;
     padding: 0 20px;
+    margin-bottom: 20px;
 }
 
 .view-cta {
