--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ h2 {
     line-height: 1.5;
     margin-bottom: 20px;
     text-align: center;
+    font-family: sans-serif;
 }
 
 .portfolio-col-title a {
