--- a/style.css
+++ b/style.css
@@ -151,6 +151,14 @@ h2 {
 .portfolio-col-title a {
     text-decoration: none;
     color: #fff;
+    border-bottom: 2px solid transparent;
+    padding-bottom: 5px;
+    display: inline-block;
+    transition:all 0.3s ease;
+}
+
+.portfolio-col-title a:hover {
+    border-color: #fff;
 }
 
 .portfolio-col-img {
